k8s/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas
---
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas-fn
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
